Fix alignment when scrollbar appears

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,6 +5,7 @@ html {
   background: var(--bg);
   color: var(--fg);
   position: relative;
+  scrollbar-gutter: stable both-edges;
 }
 
 html::before {
